feat: 完成 Paper 26.1 适配并整理配置结构